[package]
name = "asgart"
version = "2.3.0"
authors = ["Franklin Delehelle <franklin.delehelle@odena.eu>"]
license = "GPLv3"

[dependencies]
atty         = "0.2"
bio          = "*"
colored      = "1.*"
console      = "0.10"
env_logger   = "0.7"
error-chain  = "0.12"
human-panic  = "1.0"
indicatif    = "0.14"
log          = "0.4"
num_cpus     = "1.*"
palette      = "0.5"
rand         = "0.7"
rayon        = "1.*"
regex        = "1.*"
thousands    = "0.2"
serde        = "1.*"
serde_derive = "1.*"
serde_json   = "1.*"
superslice   = "1.0"
threadpool   = "1.*"
uuid         = "0.8"


[dependencies.clap]
version = "2.*"
features = [ "yaml", "suggestions", "color"]

[profile.release]
debug = true

[build-dependencies]
cmake = "0.1"
