[package]
name         = "asgart"
version      = "2.4.2"
authors      = ["Franklin Delehelle <franklin.delehelle@odena.eu>"]
edition      = "2018"
description  = "A large duplication families mapper"
license      = "GPLv3"
license_file = "LICENSE.txt"
default-run  = "asgart"

[dependencies]
anyhow       = "1.0"
atty         = "0.2"
bio          = "*"
colored      = "2.*"
console      = "0.13"
env_logger   = "0.7"
human-panic  = "1.0"
indicatif    = "0.15"
log          = "0.4"
num_cpus     = "1.*"
palette      = "0.5"
rand         = "0.7"
rayon        = "1.*"
regex        = "1.*"
serde        = "1.*"
serde_derive = "1.*"
serde_json   = "1.*"
superslice   = "1.0"
thousands    = "0.2"
threadpool   = "1.*"
uuid         = "0.8"


[dependencies.clap]
version = "2.*"
features = [ "yaml", "suggestions", "color"]

[profile.release]
debug = true

[build-dependencies]
cmake = "0.1"
