[package]
name         = "asgart"
version      = "2.4.5"
authors      = ["Franklin Delehelle <franklin.delehelle@odena.eu>"]
edition      = "2018"
description  = "A large duplication families mapper"
license      = "GPLv3"
default-run  = "asgart"

[dependencies]
anyhow       = "1.0"
atty         = "0.2"
bio          = "*"
clap         = { version = "4", features = [ "suggestions", "color", "derive" ] }
clap-verbosity-flag = "2.2.1"
console      = "0.15"
human-panic  = "2.0"
indicatif    = "0.17"
lazy_static  = "1.4"
log          = "0.4"
maplit       = "1"
num_cpus     = "1.*"
palette      = "0.5"
rand         = "0.8"
rayon        = "1.*"
regex        = "1.*"
serde        = "1.*"
serde_derive = "1.*"
serde_json   = "1.*"
simple_logger = { version = "5.0.0", features = ["colors"], default-features = false }
superslice   = "1.0"
thousands    = "0.2"
threadpool   = "1.*"
uuid         = "1.10"


[profile.release]
debug = true

[build-dependencies]
cmake = "0.1"

[package.metadata.release]
tag-prefix = ""
publish = false
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
allow-branch = ["master"]
